Update Jwt filter