@@ -28,22 +28,20 @@ public class SecurityConfig {
 	public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 	    http
 	        .csrf(csrf -> csrf.disable())
-	        
 	        .cors(cors -> cors.configurationSource(request -> {
 	            org.springframework.web.cors.CorsConfiguration config = new org.springframework.web.cors.CorsConfiguration();
 	            config.setAllowedOrigins(java.util.List.of("https://socialize-network.vercel.app"));
 	            config.setAllowedMethods(java.util.Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-	            config.setAllowedHeaders(java.util.Collections.singletonList("*"));
+	            config.setAllowedHeaders(java.util.List.of("*"));
 	            config.setAllowCredentials(true);
 	            return config;
 	        }))
 	        .authorizeHttpRequests(auth -> auth
-	            .requestMatchers("/api/auth/**").permitAll() 
+	            .requestMatchers(org.springframework.http.HttpMethod.OPTIONS, "/**").permitAll()
+	            .requestMatchers("/api/auth/**").permitAll()
 	            .anyRequest().authenticated()
 	        )
-	        
 	        .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-	        
 	        .addFilterBefore(filter, org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter.class);
 
 	    return http.build();
